# astchunk

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  justfile
.github/: dependabot.yml
.github/agents/: architect.agent.md  developer.agent.md  tester.agent.md
.github/workflows/: ci.yml  publish.yml
src/: builder.rs  byte_range.rs  chunk.rs  error.rs  lang.rs  lib.rs  main.rs  metadata.rs  node.rs  nws.rs  output.rs
src/chunker/: cast.rs  mod.rs
src/formatter/: canonical.rs  contextual.rs  mod.rs
src/internal/: byte_range.rs  materialize.rs  mod.rs  node.rs  nws.rs  partition.rs
src/types/: chunk.rs  document.rs  mod.rs
