[package]
name = "astchunk"
version = "0.0.1"
edition = "2024"
description = "AST-based code chunking for RAG"
license = "MIT"
repository = "https://github.com/Nugine/astchunk"
keywords = ["ast", "chunking", "rag", "code"]
categories = ["text-processing", "development-tools"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }

[[bin]]
name = "astchunk"
required-features = ["cli"]

[features]
default = ["python"]
cli = ["dep:clap", "dep:tracing", "dep:tracing-subscriber", "dep:chrono"]
python = ["dep:tree-sitter-python"]
java = ["dep:tree-sitter-java"]
csharp = ["dep:tree-sitter-c-sharp"]
typescript = ["dep:tree-sitter-typescript"]
all-languages = ["python", "java", "csharp", "typescript"]

[dependencies]
tree-sitter = "0.25"
tree-sitter-python = { version = "0.23", optional = true }
tree-sitter-java = { version = "0.23", optional = true }
tree-sitter-c-sharp = { version = "0.23", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5.60", features = ["derive"], optional = true }
tracing = { version = "0.1.44", optional = true }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "chrono"], optional = true }
chrono = { version = "0.4.44", optional = true }
