[package]
name = "astchunk"
version = "0.2.0-dev"
edition = "2024"
description = "AST-based code chunking for RAG"
license = "MIT"
repository = "https://github.com/Nugine/astchunk"
keywords = ["ast", "chunking", "rag", "code"]
categories = ["text-processing", "development-tools"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }

[[bin]]
name = "astchunk"
required-features = ["cli"]

[features]
cli = ["dep:clap", "dep:tracing", "dep:tracing-subscriber", "dep:chrono", "dep:comfy-table", "dep:ignore", "dep:rayon", "dep:mimalloc"]

[dependencies]
bytestring = { version = "1", features = ["serde"] }
camino = "1.2.2"
tree-sitter = "0.26.6"
tree-sitter-python = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-rust = "0.24.0"
tree-sitter-typescript = "0.23.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
clap = { version = "4.5.60", features = ["derive"], optional = true }
tracing = { version = "0.1.44", optional = true }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "chrono"], optional = true }
chrono = { version = "0.4.44", optional = true }
comfy-table = { version = "7.2.2", optional = true }
ignore = { version = "0.4.25", optional = true }
rayon = { version = "1.11.0", optional = true }
mimalloc = { version = "0.1.48", optional = true }
